--- a/miguel-portfolio/src/app/components/experiencia/experiencia.component.html
+++ b/miguel-portfolio/src/app/components/experiencia/experiencia.component.html
@@ -1,5 +1,5 @@
 <section
-  class="section py-16 md:py-36 scroll-m-20 w-full mx-auto container lg:max-w-4xl md:max-w-2xl"
+  class="section py-10 md:py-16 scroll-m-20 w-full mx-auto container lg:max-w-4xl md:max-w-2xl"
 >
   <h1
     class="text-4xl font-bold tracking-tight text-gray-800 sm:text-5xl dark:text-white"
@@ -38,7 +38,7 @@
               ><span
                 class="absolute -inset-x-4 -inset-y-2.5 hidden rounded md:-inset-x-6 md:-inset-y-4 lg:block"
               ></span
-              ><span class="text-2xl"
+              ><span class="text-2xl text-blue-400"
                 >Programador Backend · Nex<!-- -->
                 <span class="inline-block text-2xl"
                   >News<svg
