--- a/miguel-portfolio/src/app/components/sobre-mi/sobre-mi.component.html
+++ b/miguel-portfolio/src/app/components/sobre-mi/sobre-mi.component.html
@@ -1,55 +1,106 @@
-
-<section
-  class="section py-16 md:py-20 scroll-m-20 w-full mx-auto container lg:max-w-4xl md:max-w-2xl"
->
+<style>
+  @keyframes typing {
+    from { width: 0 }
+    to { width: 21ch }
+  }
+  @keyframes blink-caret {
+    from, to { border-color: transparent }
+    50% { border-color: transparent }
+  }
+  .animate-typing {
+    animation:
+      typing 1.8s steps(21) 1s 1 normal both,
+      blink-caret 0.75s step-end infinite;
+  }
+  </style>
+<section class="section py-16 md:py-20 scroll-m-20 w-full mx-auto container lg:max-w-4xl md:max-w-2xl">
   <div class="max-w-xl">
     <div class="flex gap-4 mb-4">
-      <img
-        class="rounded-full shadow-lg size-16"
-        src="assets/yo.png"
-        alt="Miguel Ángel"
-      />
-      <a
-        href="https://linkedin.com/in/midudev"
-        target="_blank"
-        rel="noopener"
-        class="flex items-center transition md:justify-center md:hover:scale-105"
-      >
-        <h3><strong>Diponible para trabajar</strong></h3>
-      </a>
+
+
     </div>
-    <h1
-      class="text-4xl font-bold tracking-tight text-gray-800 sm:text-5xl dark:text-white"
-    >
-      Miguel Pérez
-    </h1>
+    <div class="flex flex-row items-center">
+      <img class="rounded-full shadow-lg size-16 mr-3" src="assets/yo.png" alt="Miguel Ángel" />
+      <h1 class="text-4xl font-bold tracking-tight text-gray-800 sm:text-5xl dark:text-white">
+        Miguel Pérez
+      </h1>
+    </div>
+
+    <h3 class="text-blue-400 text-2xl font-mono font-medium overflow-hidden whitespace-nowrap  animate-typing" style="width: 21ch">Programador FullStack</h3>
     <p
-      class="mt-6 text-xl text-gray-800 dark:[&amp;&gt;strong]:text-yellow-200 [&amp;&gt;strong]:text-yellow-500 [&amp;&gt;strong]:font-semibold dark:text-gray-300"
-    >
-      Lorem Ipsum
-      <strong
-        >Programador full stack</strong
-      >
-      de Chile. Especializado en el desarrollo de aplicaciones
-      web únicas.
+      class="mt-6 text-xl text-gray-800 dark:[&amp;&gt;strong]:text-yellow-200 [&amp;&gt;strong]:text-yellow-500 [&amp;&gt;strong]:font-semibold dark:text-white">
+      Soy Miguel Pérez, <strong>programador FullStack </strong> especializado en Angular.
+      Trabajo con tecnologías como Python, JavaScript, Java, TypeScript,
+      Ionic, HTML5 y CSS para desarrollar interfaces web eficientes, escalables y adaptadas a diferentes necesidades.
     </p>
     <nav class="flex flex-wrap gap-4 mt-8">
       <a href="">
-        <button class="btn bg-white text-black border-[#e5e5e5]">
-          <svg aria-label="Email icon" width="16" height="16" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><g stroke-linejoin="round" stroke-linecap="round" stroke-width="2" fill="none" stroke="black"><rect width="20" height="16" x="2" y="4" rx="2"></rect><path d="m22 7-8.97 5.7a1.94 1.94 0 0 1-2.06 0L2 7"></path></g></svg>
+        <button class="btn bg-white text-black border-[#e5e5e5]
+                bg-gradient-to-r
+          from-[#ffffff] via-[#ffffff] to-[#8b8c8d]
+          bg-[length:200%_auto]
+          bg-left
+          hover:bg-right
+          hover:text-black
+          transition-all
+          duration-500
+          ease-in-out
+          py-3 px-6
+          rounded
+          font-medium">
+          <svg aria-label="Email icon" width="16" height="16" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+            <g stroke-linejoin="round" stroke-linecap="round" stroke-width="2" fill="none" stroke="black">
+              <rect width="20" height="16" x="2" y="4" rx="2"></rect>
+              <path d="m22 7-8.97 5.7a1.94 1.94 0 0 1-2.06 0L2 7"></path>
+            </g>
+          </svg>
           Contáctame
         </button>
       </a>
       <a href="https://www.linkedin.com/in/migperezf/" target="_blank">
-      <button class="btn bg-[#0967C2] text-white border-[#0059b3]">
-        <svg aria-label="LinkedIn logo" width="16" height="16" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32"><path fill="white" d="M26.111,3H5.889c-1.595,0-2.889,1.293-2.889,2.889V26.111c0,1.595,1.293,2.889,2.889,2.889H26.111c1.595,0,2.889-1.293,2.889-2.889V5.889c0-1.595-1.293-2.889-2.889-2.889ZM10.861,25.389h-3.877V12.87h3.877v12.519Zm-1.957-14.158c-1.267,0-2.293-1.034-2.293-2.31s1.026-2.31,2.293-2.31,2.292,1.034,2.292,2.31-1.026,2.31-2.292,2.31Zm16.485,14.158h-3.858v-6.571c0-1.802-.685-2.809-2.111-2.809-1.551,0-2.362,1.048-2.362,2.809v6.571h-3.718V12.87h3.718v1.686s1.118-2.069,3.775-2.069,4.556,1.621,4.556,4.975v7.926Z" fill-rule="evenodd"></path></svg>
-        LinkedIn
-      </button>
+        <button class="btn bg-[#0967C2] text-white
+      bg-gradient-to-r
+  from-[#0967C2] via-[#0967C2] to-[#96bbe0]
+  bg-[length:200%_auto]
+  bg-left
+  border-[#0059b3]
+
+  hover:bg-right
+  hover:text-black
+  transition-all
+  duration-500
+  ease-in-out
+  py-3 px-6
+  rounded
+  font-medium">
+          <svg aria-label="LinkedIn logo" width="16" height="16" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32">
+            <path fill="white"
+              d="M26.111,3H5.889c-1.595,0-2.889,1.293-2.889,2.889V26.111c0,1.595,1.293,2.889,2.889,2.889H26.111c1.595,0,2.889-1.293,2.889-2.889V5.889c0-1.595-1.293-2.889-2.889-2.889ZM10.861,25.389h-3.877V12.87h3.877v12.519Zm-1.957-14.158c-1.267,0-2.293-1.034-2.293-2.31s1.026-2.31,2.293-2.31,2.292,1.034,2.292,2.31-1.026,2.31-2.292,2.31Zm16.485,14.158h-3.858v-6.571c0-1.802-.685-2.809-2.111-2.809-1.551,0-2.362,1.048-2.362,2.809v6.571h-3.718V12.87h3.718v1.686s1.118-2.069,3.775-2.069,4.556,1.621,4.556,4.975v7.926Z"
+              fill-rule="evenodd"></path>
+          </svg>
+          LinkedIn
+        </button>
 
       </a>
       <a href="https://github.com/SubwayEnjoyer" target="_blank">
-        <button class="btn bg-black text-white border-black">
-          <svg aria-label="GitHub logo" width="16" height="16" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="white" d="M12,2A10,10 0 0,0 2,12C2,16.42 4.87,20.17 8.84,21.5C9.34,21.58 9.5,21.27 9.5,21C9.5,20.77 9.5,20.14 9.5,19.31C6.73,19.91 6.14,17.97 6.14,17.97C5.68,16.81 5.03,16.5 5.03,16.5C4.12,15.88 5.1,15.9 5.1,15.9C6.1,15.97 6.63,16.93 6.63,16.93C7.5,18.45 8.97,18 9.54,17.76C9.63,17.11 9.89,16.67 10.17,16.42C7.95,16.17 5.62,15.31 5.62,11.5C5.62,10.39 6,9.5 6.65,8.79C6.55,8.54 6.2,7.5 6.75,6.15C6.75,6.15 7.59,5.88 9.5,7.17C10.29,6.95 11.15,6.84 12,6.84C12.85,6.84 13.71,6.95 14.5,7.17C16.41,5.88 17.25,6.15 17.25,6.15C17.8,7.5 17.45,8.54 17.35,8.79C18,9.5 18.38,10.39 18.38,11.5C18.38,15.32 16.04,16.16 13.81,16.41C14.17,16.72 14.5,17.33 14.5,18.26C14.5,19.6 14.5,20.68 14.5,21C14.5,21.27 14.66,21.59 15.17,21.5C19.14,20.16 22,16.42 22,12A10,10 0 0,0 12,2Z"></path></svg>
+        <button class="btn bg-black text-white border-black
+        bg-gradient-to-r
+  from-[#000000] via-[#000000] to-[#46494d]
+  bg-[length:200%_auto]
+  bg-left
+  hover:bg-right
+  hover:text-white
+  transition-all
+  duration-500
+  ease-in-out
+  py-3 px-6
+  rounded
+  font-medium">
+          <svg aria-label="GitHub logo" width="16" height="16" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+            <path fill="white"
+              d="M12,2A10,10 0 0,0 2,12C2,16.42 4.87,20.17 8.84,21.5C9.34,21.58 9.5,21.27 9.5,21C9.5,20.77 9.5,20.14 9.5,19.31C6.73,19.91 6.14,17.97 6.14,17.97C5.68,16.81 5.03,16.5 5.03,16.5C4.12,15.88 5.1,15.9 5.1,15.9C6.1,15.97 6.63,16.93 6.63,16.93C7.5,18.45 8.97,18 9.54,17.76C9.63,17.11 9.89,16.67 10.17,16.42C7.95,16.17 5.62,15.31 5.62,11.5C5.62,10.39 6,9.5 6.65,8.79C6.55,8.54 6.2,7.5 6.75,6.15C6.75,6.15 7.59,5.88 9.5,7.17C10.29,6.95 11.15,6.84 12,6.84C12.85,6.84 13.71,6.95 14.5,7.17C16.41,5.88 17.25,6.15 17.25,6.15C17.8,7.5 17.45,8.54 17.35,8.79C18,9.5 18.38,10.39 18.38,11.5C18.38,15.32 16.04,16.16 13.81,16.41C14.17,16.72 14.5,17.33 14.5,18.26C14.5,19.6 14.5,20.68 14.5,21C14.5,21.27 14.66,21.59 15.17,21.5C19.14,20.16 22,16.42 22,12A10,10 0 0,0 12,2Z">
+            </path>
+          </svg>
           GitHub
         </button>
       </a>
