about-me corregido

--- a/miguel-portfolio/src/app/components/about-me/about-me.component.html
+++ b/miguel-portfolio/src/app/components/about-me/about-me.component.html
@@ -1,7 +1,7 @@
 <section class="section py-16 md:py-20 scroll-m-20 w-full mx-auto container lg:max-w-4xl md:max-w-2xl">
 
   <div class="flex lg:flex-row flex-col">
-    <div class="lg:max-w-3/4">
+    <article class="lg:max-w-3/4">
       <header>
         <h1 class="text-4xl font-bold tracking-tight text-gray-800 sm:text-5xl dark:text-white mb-15">¿Quién es Miguel?</h1>
       </header>
@@ -24,7 +24,7 @@
 
 
       </div>
-    </div>
+    </article>
 
       <img loading="lazy" src="../../../assets/yo.png" alt="" class="sm:mt-10 mt-10 rounded-2xl max-w-[300px] max-h-[300px] rotate-5 md:ml-10 border-4 border-amber-50">
 
