Ahora sí todo arreglado xdxdxdxdxd

--- a/miguel-portfolio/src/app/components/proyecto-card/proyecto-card.component.html
+++ b/miguel-portfolio/src/app/components/proyecto-card/proyecto-card.component.html
@@ -1,126 +1,76 @@
+
+
 <div class="card lg:card-side  shadow-sm mb-10 ">
-  <div class="flex flex-row">
-  <figure
-    class="max-w-md object-cover w-1/2 rounded-2xl transition-transform hover:scale-102 border-1 border-blue-900"
+  <div class="flex lg:flex-row md:flex-col sm:flex-col flex-col">
+    <figure class=" max-h-[330px] md:max-w-[100%] sm:w-[100%] w-[100%] object-contain rounded-2xl transition-transform hover:scale-102 border-1 border-blue-900"
+
   >
-    <img src="../../../assets/p.png" alt="Album" />
+    <img loading="lazy" src="../../../assets/p.png" alt="Imagen completa"  />
   </figure>
-  <div class="flex flex-col w-1/2">
-  <div class="card-body">
-    <h2 class="card-title">Peluquería</h2>
-    <p>
-      Con un equipo desarrollamos una aplicación web para la gestión de citas de una peluquería, facilitando el registro, modificación y visualización de horarios, con el fin de mejorar la organización y optimizar tiempo.
-    <div class="flex flex-col">
-    <div class="flex flex-row gap-2">
+  <div class="flex flex-col sm:w-[100%] md:max-w-[100%]  w-[100%] lg:max-w-1/2">
+    <div class="card-body">
+      <h2 class="card-title text-2xl">Peluquería</h2>
+      <p class="mb-4">
+        Con un equipo desarrollamos una aplicación web para la gestión de citas de una peluquería, facilitando el registro, modificación y visualización de horarios, con el fin de mejorar la organización y optimizar tiempo.
+      </p>
 
-      <div
-        class="flex items-center rounded bg-gray-300/10 px-3 py-1 text-xs font-medium leading-5 text-white gap-1"
-      >
-        Angular
-        <svg height="20" width="30" xmlns="http://www.w3.org/2000/svg">
-          <image
-            height="20"
-            width="30"
-            href="../../../assets/angular-svgrepo-com.svg"
-          />
-        </svg>
-      </div>
-      <div
-        class="flex items-center rounded bg-gray-300/10 px-3 py-1 text-xs font-medium leading-5 text-white gap-1"
-      >
-        Node js
-        <svg height="20" width="30" xmlns="http://www.w3.org/2000/svg">
-          <image
-            height="20"
-            width="30"
-            href="../../../assets/node-js-svgrepo-com.svg"
-          />
-        </svg>
-      </div>
-      <div
-        class="flex items-center rounded bg-gray-300/10 px-3 py-1 text-xs font-medium leading-5 text-white gap-1"
-      >
-        Prisma
-        <svg height="20" width="30" xmlns="http://www.w3.org/2000/svg">
-          <image
-            height="20"
-            width="30"
-            href="../../../assets/prisma.svg"
-          />
-        </svg>
-      </div>
-      <div
-        class="flex items-center rounded bg-gray-300/10 px-3 py-1 text-xs font-medium leading-5 text-white gap-1"
-      >
-        TS
-        <svg height="20" width="30" xmlns="http://www.w3.org/2000/svg">
-          <image
-            height="20"
-            width="30"
-            href="../../../assets/typescript-official-svgrepo-com.svg"
-          />
-        </svg>
-      </div>
+      <ul class="flex flex-row gap-2 ">
+        <li class="flex items-center rounded bg-gray-300/10 px-3 py-1 text-xs font-medium leading-5 text-white gap-1">
+          Angular
+          <svg height="20" width="30" xmlns="http://www.w3.org/2000/svg">
+            <image  height="20" width="30" href="../../../assets/angular-svgrepo-com.svg" />
+          </svg>
+        </li>
+        <li class="flex items-center rounded bg-gray-300/10 px-3 py-1 text-xs font-medium leading-5 text-white gap-1">
+          Node js
+          <svg height="20" width="30" xmlns="http://www.w3.org/2000/svg">
+            <image height="20" width="30" href="../../../assets/node-js-svgrepo-com.svg" />
+          </svg>
+        </li>
+        <li class="flex items-center rounded bg-gray-300/10 px-3 py-1 text-xs font-medium leading-5 text-white gap-1">
+          TS
+          <svg height="20" width="30" xmlns="http://www.w3.org/2000/svg">
+            <image height="20" width="30" href="../../../assets/typescript-official-svgrepo-com.svg" />
+          </svg>
+        </li>
+      </ul>
+
+      <ul class="flex flex-row gap-2">
+        <li class="flex items-center rounded bg-gray-300/10 px-3 py-1 text-xs font-medium leading-5 text-white gap-1">
+          JS
+          <svg height="20" width="30" xmlns="http://www.w3.org/2000/svg">
+            <image height="20" width="30" href="../../../assets/js-svgrepo-com.svg" />
+          </svg>
+        </li>
+        <li class="flex items-center rounded bg-gray-300/10 px-3 py-1 text-xs font-medium leading-5 text-white gap-1">
+          SQL
+          <svg height="20" width="30" xmlns="http://www.w3.org/2000/svg">
+            <image height="20" width="30" href="../../../assets/sql-svgrepo-com.svg" />
+          </svg>
+        </li>
+        <li class="flex items-center rounded bg-gray-300/10 px-3 py-1 text-xs font-medium leading-5 text-white gap-1">
+          Tailwindcss
+          <svg height="20" width="30" xmlns="http://www.w3.org/2000/svg">
+            <image height="20" width="30" href="../../../assets/tailwindcss-icon-svgrepo-com.svg" />
+          </svg>
+        </li>
+      </ul>
+
+      <ul class="flex flex-row gap-2">
+        <li class="flex items-center rounded bg-gray-300/10 px-3 py-1 text-xs font-medium leading-5 text-white gap-1">
+          Git
+          <svg height="20" width="30" xmlns="http://www.w3.org/2000/svg">
+            <image height="20" width="30" href="../../../assets/git-svgrepo-com.svg" />
+          </svg>
+        </li>
+        <li class="flex items-center rounded bg-gray-300/10 px-3 py-1 text-xs font-medium leading-5 text-white gap-1">
+          Prisma
+          <svg height="20" width="30" xmlns="http://www.w3.org/2000/svg">
+            <image height="20" width="30" href="../../../assets/prisma.svg" />
+          </svg>
+        </li>
+      </ul>
     </div>
-
-    </div>
-    <div class="flex flex-col">
-      <div class="flex flex-row gap-2">
-        <div
-        class="flex items-center rounded bg-gray-300/10 px-3 py-1 text-xs font-medium leading-5 text-white gap-1"
-      >
-        JS
-        <svg height="20" width="30" xmlns="http://www.w3.org/2000/svg">
-          <image
-            height="20"
-            width="30"
-            href="../../../assets/js-svgrepo-com.svg"
-          />
-        </svg>
-      </div>
-      <div
-        class="flex items-center rounded bg-gray-300/10 px-3 py-1 text-xs font-medium leading-5 text-white gap-1"
-      >
-        Git
-        <svg height="20" width="30" xmlns="http://www.w3.org/2000/svg">
-          <image
-            height="20"
-            width="30"
-            href="../../../assets/git-svgrepo-com.svg"
-          />
-        </svg>
-      </div>
-      <div
-        class="flex items-center rounded bg-gray-300/10 px-3 py-1 text-xs font-medium leading-5 text-white gap-1"
-      >
-        SQL
-        <svg height="20" width="30" xmlns="http://www.w3.org/2000/svg">
-          <image
-            height="20"
-            width="30"
-            href="../../../assets/sql-svgrepo-com.svg"
-          />
-        </svg>
-      </div>
-
-      <div
-        class="flex items-center rounded bg-gray-300/10 px-3 py-1 text-xs font-medium leading-5 text-white gap-1"
-      >
-        Tailwindcss
-        <svg height="20" width="30" xmlns="http://www.w3.org/2000/svg">
-          <image
-            height="20"
-            width="30"
-            href="../../../assets/tailwindcss-icon-svgrepo-com.svg"
-          />
-        </svg>
-      </div>
-
-      </div>
-    </div>
-
-
-  </div>
   <div class="card-actions justify-end gap-2">
     <a  target="_blank">
       <button class="btn bg-white text-black
@@ -187,3 +137,4 @@
 
 </div>
 </div>
+
