--- a/miguel-portfolio/src/app/components/card-2/card-2.component.html
+++ b/miguel-portfolio/src/app/components/card-2/card-2.component.html
@@ -1,222 +1,203 @@
 <div class="card lg:card-side  shadow-sm mb-10 ">
-<div class="flex md:flex-row flex-col">
-  <figure
-    class="max-w-md object-cover  rounded-2xl transition-transform hover:scale-102  border-1 border-blue-900"
-  >
-    <img src="../../../assets/o.png" alt="Album" class="rounded-2xl" />
-  </figure>
+  <div class="flex lg:flex-row md:flex-col sm:flex-col flex-col">
+    <figure class=" max-h-[330px] md:max-w-[100%] sm:w-[100%] w-[100%] object-contain rounded-2xl transition-transform hover:scale-102 border-1 border-blue-900"
+
+    >
+      <img src="../../../assets/o.png" alt="Imagen completa"  />
+    </figure>
 
 
 
 
 
-  <div class="flex flex-col md:w-1/2">
-  <div class="card-body" >
-    <h2 class="card-title text-2xl">OrdenaloTodo</h2>
-    <!-- <h3 class="text-blue-400 text-xl">Programador FullStack</h3> -->
-    <p class=" ">
-      Con mi equipo desarrollamos un SaaS para PYMES que agiliza las ventas con lector de códigos de barras y genera informes detallados en Excel, optimizando la gestión comercial. La solución permite controlar inventario, analizar ventas y mejorar la productividad en negocios minoristas, todo desde una plataforma centralizada.
-    <div class="flex flex-col">
-    <div class="flex flex-row gap-2">
 
-      <div
-        class="flex items-center rounded bg-gray-300/10 px-3 py-1 text-xs font-medium leading-5 text-white gap-1"
-      >
-        Angular
-        <svg height="20" width="30" xmlns="http://www.w3.org/2000/svg">
-          <image
-            height="20"
-            width="30"
-            href="../../../assets/angular-svgrepo-com.svg"
-          />
-        </svg>
-      </div>
-      <div
-        class="flex items-center rounded bg-gray-300/10 px-3 py-1 text-xs font-medium leading-5 text-white gap-1"
-      >
-        Node js
-        <svg height="20" width="30" xmlns="http://www.w3.org/2000/svg">
-          <image
-            height="20"
-            width="30"
-            href="../../../assets/node-js-svgrepo-com.svg"
-          />
-        </svg>
-      </div>
-      <div
-        class="flex items-center rounded bg-gray-300/10 px-3 py-1 text-xs font-medium leading-5 text-white gap-1"
-      >
-        JS
-        <svg height="20" width="30" xmlns="http://www.w3.org/2000/svg">
-          <image
-            height="20"
-            width="30"
-            href="../../../assets/js-svgrepo-com.svg"
-          />
-        </svg>
-      </div>
-      <div
-        class="flex items-center rounded bg-gray-300/10 px-3 py-1 text-xs font-medium leading-5 text-white gap-1"
-      >
-        TS
-        <svg height="20" width="30" xmlns="http://www.w3.org/2000/svg">
-          <image
-            height="20"
-            width="30"
-            href="../../../assets/typescript-official-svgrepo-com.svg"
-          />
-        </svg>
-      </div>
-    </div>
+  <div class="flex flex-col sm:w-[100%] md:max-w-[100%]  w-[100%] lg:max-w-1/2">
+    <div class="card-body" >
+      <h2 class="card-title text-2xl">OrdenaloTodo</h2>
+      <!-- <h3 class="text-blue-400 text-xl">Programador FullStack</h3> -->
+      <p class=" ">
+        Con mi equipo desarrollamos un SaaS para PYMES que agiliza las ventas con lector de códigos de barras y genera informes detallados en Excel, optimizando la gestión comercial. La solución permite controlar inventario, analizar ventas y mejorar la productividad en negocios minoristas, todo desde una plataforma centralizada.
+      <ul class="flex flex-row gap-2">
+        <li class="flex items-center rounded bg-gray-300/10 px-3 py-1 text-xs font-medium leading-5 text-white gap-1">
+          Angular
+          <svg height="20" width="30" xmlns="http://www.w3.org/2000/svg">
+            <image
+              height="20"
+              width="30"
+              href="../../../assets/angular-svgrepo-com.svg"
+            />
+          </svg>
+        </li>
+        <li class="flex items-center rounded bg-gray-300/10 px-3 py-1 text-xs font-medium leading-5 text-white gap-1">
+          JS
+          <svg height="20" width="30" xmlns="http://www.w3.org/2000/svg">
+            <image
+              height="20"
+              width="30"
+              href="../../../assets/js-svgrepo-com.svg"
+            />
+          </svg>
+        </li>
+        <li class="flex items-center rounded bg-gray-300/10 px-3 py-1 text-xs font-medium leading-5 text-white gap-1">
+          TS
+          <svg height="20" width="30" xmlns="http://www.w3.org/2000/svg">
+            <image
+              height="20"
+              width="30"
+              href="../../../assets/typescript-official-svgrepo-com.svg"
+            />
+          </svg>
+        </li>
+      </ul>
 
-    </div>
-    <div class="flex flex-col">
-      <div class="flex flex-row gap-2">
-        <div
-        class="flex items-center rounded bg-gray-300/10 px-3 py-1 text-xs font-medium leading-5 text-white gap-1"
-      >
-      Sequalize
-        <svg height="20" width="30" xmlns="http://www.w3.org/2000/svg">
-          <image
-            height="20"
-            width="30"
-            href="../../../assets/sequelize-svgrepo-com.svg"
-          />
-        </svg>
-      </div>
-      <div
-        class="flex items-center rounded bg-gray-300/10 px-3 py-1 text-xs font-medium leading-5 text-white gap-1"
-      >
-        Git
-        <svg height="20" width="30" xmlns="http://www.w3.org/2000/svg">
-          <image
-            height="20"
-            width="30"
-            href="../../../assets/git-svgrepo-com.svg"
-          />
-        </svg>
-      </div>
-      <div
-        class="flex items-center rounded bg-gray-300/10 px-3 py-1 text-xs font-medium leading-5 text-white gap-1"
-      >
-        SQL
-        <svg height="20" width="30" xmlns="http://www.w3.org/2000/svg">
-          <image
-            height="20"
-            width="30"
-            href="../../../assets/sql-svgrepo-com.svg"
-          />
-        </svg>
-      </div>
+          <ul class="flex flex-row gap-2">
+            <li class="flex items-center rounded bg-gray-300/10 px-3 py-1 text-xs font-medium leading-5 text-white gap-1">
 
-      <div
-        class="flex items-center rounded bg-gray-300/10 px-3 py-1 text-xs font-medium leading-5 text-white gap-1"
-      >
-        PLSQL
-        <svg height="20" width="30" xmlns="http://www.w3.org/2000/svg">
-          <image
-            height="20"
-            width="30"
-            href="../../../assets/plsql-svgrepo-com.svg"
-          />
-        </svg>
-      </div>
-
-      </div>
-    </div>
-
-
-  </div>
-  <div class="card-actions justify-end gap-2">
-    <a  target="_blank">
-      <button class="btn  bg-white text-black
-      bg-gradient-to-r
-          from-[#ffffff] via-[#ffffff] to-[#8b8c8d]
-          bg-[length:200%_auto]
-          bg-left
-          hover:bg-right
-          hover:text-black
-          transition-all
-          duration-500
-          ease-in-out
-          py-3 px-6
-          rounded
-          font-medium" onclick="my_modal_3.showModal()">
-
-        <svg
-
-          width="16"
-          height="16"
-          xmlns="http://www.w3.org/2000/svg"
-          viewBox="0 0 24 24"
+        Sequalize
+          <svg height="20" width="30" xmlns="http://www.w3.org/2000/svg">
+            <image
+              height="20"
+              width="30"
+              href="../../../assets/sequelize-svgrepo-com.svg"
+            />
+          </svg>
+            </li>
+            <li>
+              <div
+          class="flex items-center rounded bg-gray-300/10 px-3 py-1 text-xs font-medium leading-5 text-white gap-1"
         >
-
-          <image height="20" width="30" href="../../../assets/link-svgrepo-com.svg" />
-
-        </svg>
-        Video demostración
-      </button>
-    </a>
-
-    <a href="https://github.com/OtakuQlo/ProyectoFinal" target="_blank"
-    class="pr-6">
-      <button class="btn bg-black text-white border-black
-      bg-gradient-to-r
-  from-[#000000] via-[#000000] to-[#46494d]
-  bg-[length:200%_auto]
-  bg-left
-  hover:bg-right
-  hover:text-white
-  transition-all
-  duration-500
-  ease-in-out
-  py-3 px-6
-  rounded
-  font-medium">
-        <svg
-          aria-label="GitHub logo"
-          width="16"
-          height="16"
-          xmlns="http://www.w3.org/2000/svg"
-          viewBox="0 0 24 24"
+          Git
+          <svg height="20" width="30" xmlns="http://www.w3.org/2000/svg">
+            <image
+              height="20"
+              width="30"
+              href="../../../assets/git-svgrepo-com.svg"
+            />
+          </svg>
+        </div>
+            </li>
+            <li>
+              <div
+          class="flex items-center rounded bg-gray-300/10 px-3 py-1 text-xs font-medium leading-5 text-white gap-1"
         >
-          <path
-            fill="white"
-            d="M12,2A10,10 0 0,0 2,12C2,16.42 4.87,20.17 8.84,21.5C9.34,21.58 9.5,21.27 9.5,21C9.5,20.77 9.5,20.14 9.5,19.31C6.73,19.91 6.14,17.97 6.14,17.97C5.68,16.81 5.03,16.5 5.03,16.5C4.12,15.88 5.1,15.9 5.1,15.9C6.1,15.97 6.63,16.93 6.63,16.93C7.5,18.45 8.97,18 9.54,17.76C9.63,17.11 9.89,16.67 10.17,16.42C7.95,16.17 5.62,15.31 5.62,11.5C5.62,10.39 6,9.5 6.65,8.79C6.55,8.54 6.2,7.5 6.75,6.15C6.75,6.15 7.59,5.88 9.5,7.17C10.29,6.95 11.15,6.84 12,6.84C12.85,6.84 13.71,6.95 14.5,7.17C16.41,5.88 17.25,6.15 17.25,6.15C17.8,7.5 17.45,8.54 17.35,8.79C18,9.5 18.38,10.39 18.38,11.5C18.38,15.32 16.04,16.16 13.81,16.41C14.17,16.72 14.5,17.33 14.5,18.26C14.5,19.6 14.5,20.68 14.5,21C14.5,21.27 14.66,21.59 15.17,21.5C19.14,20.16 22,16.42 22,12A10,10 0 0,0 12,2Z"
-          ></path>
-        </svg>
-        GitHub
-      </button>
-    </a>
-  </div>
-</div>
-
-</div>
-
-</div>
+          SQL
+          <svg height="20" width="30" xmlns="http://www.w3.org/2000/svg">
+            <image
+              height="20"
+              width="30"
+              href="../../../assets/sql-svgrepo-com.svg"
+            />
+          </svg>
+        </div>
+            </li>
+          </ul>
 
 
 
 
 
-<dialog id="my_modal_3" class="modal">
-  <div class="modal-box max-w-none w-11/12 max-h-[90vh] h-auto p-0">
-    <div class="flex flex-col h-full">
-      <div class="mb-1 sticky top-0 bg-base-100 z-10 p-2">
-        <form method="dialog">
-          <button class="btn btn-sm btn-circle btn-ghost absolute right-2 top-2" (click)="detener()">✕</button>
-        </form>
-      </div>
 
-      <div class="flex-1 overflow-auto p-4">
-        <video #video class="w-full h-auto max-h-[80vh] rounded-lg" controls autoplay>
-          <source
-            src="../../../assets/demo4.m4"
-            type="video/mp4"
-          />
-          Your browser does not support the video tag.
-        </video>
-      </div>
+
+
+
+        <ul class="flex flex-row gap-2">
+          <li class="flex items-center rounded bg-gray-300/10 px-3 py-1 text-xs font-medium leading-5 text-white gap-1">
+            PLSQL
+            <svg height="20" width="30" xmlns="http://www.w3.org/2000/svg">
+              <image
+                height="20"
+                width="30"
+                href="../../../assets/plsql-svgrepo-com.svg"
+              />
+            </svg>
+          </li>
+          <li class="flex items-center rounded bg-gray-300/10 px-3 py-1 text-xs font-medium leading-5 text-white gap-1">
+            Node js
+            <svg height="20" width="30" xmlns="http://www.w3.org/2000/svg">
+              <image
+                height="20"
+                width="30"
+                href="../../../assets/node-js-svgrepo-com.svg"
+              />
+            </svg>
+          </li>
+        </ul>
+
+
+
+
+
+
+
+    </div>
+    <div class="card-actions justify-end gap-2">
+      <a  target="_blank" href="https://youtu.be/xafVgrN9V5A">
+        <button class="btn  bg-white text-black
+        bg-gradient-to-r
+            from-[#ffffff] via-[#ffffff] to-[#8b8c8d]
+            bg-[length:200%_auto]
+            bg-left
+            hover:bg-right
+            hover:text-black
+            transition-all
+            duration-500
+            ease-in-out
+            py-3 px-6
+            rounded
+            font-medium" >
+
+          <svg
+
+            width="16"
+            height="16"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 24 24"
+          >
+
+            <image height="20" width="30" href="../../../assets/link-svgrepo-com.svg" />
+
+          </svg>
+          Video demostración
+        </button>
+      </a>
+
+      <a href="https://github.com/OtakuQlo/ProyectoFinal" target="_blank"
+      class="pr-6">
+        <button class="btn bg-black text-white border-black
+        bg-gradient-to-r
+    from-[#000000] via-[#000000] to-[#46494d]
+    bg-[length:200%_auto]
+    bg-left
+    hover:bg-right
+    hover:text-white
+    transition-all
+    duration-500
+    ease-in-out
+    py-3 px-6
+    rounded
+    font-medium">
+          <svg
+            aria-label="GitHub logo"
+            width="16"
+            height="16"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 24 24"
+          >
+            <path
+              fill="white"
+              d="M12,2A10,10 0 0,0 2,12C2,16.42 4.87,20.17 8.84,21.5C9.34,21.58 9.5,21.27 9.5,21C9.5,20.77 9.5,20.14 9.5,19.31C6.73,19.91 6.14,17.97 6.14,17.97C5.68,16.81 5.03,16.5 5.03,16.5C4.12,15.88 5.1,15.9 5.1,15.9C6.1,15.97 6.63,16.93 6.63,16.93C7.5,18.45 8.97,18 9.54,17.76C9.63,17.11 9.89,16.67 10.17,16.42C7.95,16.17 5.62,15.31 5.62,11.5C5.62,10.39 6,9.5 6.65,8.79C6.55,8.54 6.2,7.5 6.75,6.15C6.75,6.15 7.59,5.88 9.5,7.17C10.29,6.95 11.15,6.84 12,6.84C12.85,6.84 13.71,6.95 14.5,7.17C16.41,5.88 17.25,6.15 17.25,6.15C17.8,7.5 17.45,8.54 17.35,8.79C18,9.5 18.38,10.39 18.38,11.5C18.38,15.32 16.04,16.16 13.81,16.41C14.17,16.72 14.5,17.33 14.5,18.26C14.5,19.6 14.5,20.68 14.5,21C14.5,21.27 14.66,21.59 15.17,21.5C19.14,20.16 22,16.42 22,12A10,10 0 0,0 12,2Z"
+            ></path>
+          </svg>
+          GitHub
+        </button>
+      </a>
     </div>
   </div>
-</dialog>
+
+  </div>
+
+  </div>
+
+
+
+
